# camouchat-browser

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  publish.yml
docs/: BrowserForge.md  browser_config.md  camoufox_browser.md  profiles.md
src/camouchat_browser/: __init__.py  browser_config.py  browser_logger.py  browserforge.py  camoufox_browser.py  directory.py  exceptions.py  profile_info.py  profile_manager.py
tests/: script_profile.py  smoke_logger_integration.py  test_browser_logger_integration.py
tests/unit/: test_browser_config.py  test_browserforge_manager.py  test_camoufox_browser.py  test_directory.py  test_fingerprint_uniqueness.py  test_profile_info.py  test_profile_manager.py
