[project]
name = "camouchat-browser"
version = "0.7.0"
description = "Plugin for CamouChat providing anti-detection browser management via Camoufox and Playwright."
readme = "README.md"
authors = [
    { name = "BITS-Rohit", email = "rohitguptaradheradhe123@gmail.com" }
]
maintainers = [
    { name = "BITS-Rohit", email = "rohitguptaradheradhe123@gmail.com" }
]
requires-python = ">=3.11"
license = "MIT"
keywords = [
    "browser-automation",
    "stealth",
    "camoufox",
    "playwright",
    "anti-detection",
    "fingerprinting",
    "browserforge"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Framework :: AsyncIO",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Natural Language :: English",
]
dependencies = [
    "browserforge>=1.2.4",
    "camouchat-core",
    "camoufox[geoip]>=0.4.11",
    "platformdirs>=4.9.6",
    "playwright>=1.58.0",
    "pyobjc-framework-Quartz; sys_platform == 'darwin'",
]

[project.urls]
Homepage = "https://github.com/CamouChat-Team"
Repository = "https://github.com/CamouChat-Team/camouchat-browser"
"Bug Tracker" = "https://github.com/CamouChat-Team/camouchat-browser/issues"
Changelog = "https://github.com/CamouChat-Team/camouchat-browser/releases"

[tool.deptry]
known_first_party = ["camouchat_browser"]
package_module_name_map = { "pyobjc-framework-Quartz" = "Quartz" }
per_rule_ignores = { DEP002 = "pyobjc-framework-Quartz", DEP003 = "camouchat_browser" }

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=camouchat_browser --cov-report=term-missing"

[tool.coverage.run]
source = ["camouchat_browser"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ASYNC"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true

[build-system]
requires = ["uv_build>=0.10.7,<0.11.0"]
build-backend = "uv_build"
[tool.uv.sources]
camouchat-core = { workspace = true }

[dependency-groups]
dev = [
    "deptry>=0.25.1",
    "mypy>=1.20.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.10",
    "twine>=6.2.0",
]
